--- a/admin/package.json
+++ b/admin/package.json
@@ -8,15 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "element-ui": "^2.10.1",
-    "vue": "^2.6.10"
+    "element-ui": "^2.4.5",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "babel-eslint": "^10.0.1",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-element-ui": "^1.1.4",
     "vue-template-compiler": "^2.6.10"
   },
