--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
