--- a/admin/package.json
+++ b/admin/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.4.5",
+    "js-base64": "^2.5.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "qs": "^6.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
   },
@@ -31,8 +33,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/essential"
     ],
     "rules": {},
     "parserOptions": {
