--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "mint-ui": "^2.2.13",
     "nprogress": "^0.2.0",
+    "postcss-import": "^12.0.1",
     "vue": "^2.6.10",
     "vue-piczoom": "^1.0.6",
     "vue-router": "^3.0.3",
@@ -24,6 +25,7 @@
     "@vue/cli-service": "^3.9.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "vue-cli-plugin-axios": "^0.0.4",
     "vue-cli-plugin-bootstrap": "^1.0.0-alpha.0",
     "vue-cli-plugin-element-ui": "^1.1.4",
