--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mysql": "^2.17.1",
     "node": "^12.6.0",
     "nodemon": "^1.19.1",
-    "router": "^1.3.3"
+    "router": "^1.3.3",
+    "session-file-store": "^1.3.1"
   }
 }
