--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,6 @@
     "mysql": "^2.17.1",
     "node": "^12.6.0",
     "nodemon": "^1.19.1",
-    "router": "^1.3.3",
-    "session-file-store": "^1.3.1"
+    "router": "^1.3.3"
   }
 }
