--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon index.js",
+    "serve": "pm2 start index.js --watch",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
