--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "pm2 start index.js --watch",
+    "serve": "pm2 start index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
     "mysql": "^2.17.1",
     "node": "^12.6.0",
     "nodemon": "^1.19.1",
+    "pm2": "^3.5.1",
     "router": "^1.3.3"
   }
 }
